[SD-803] Fix Billing address has text wrapping in Confirm step of the Checkout

--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/checkout/confirm.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/checkout/confirm.scss
@@ -185,6 +185,11 @@
   }
 
   &-delivery-informations {
+    div:first-child {
+      flex-shrink: unset;
+      -webkit-flex: unset;
+    }
+
     border-bottom: 1px solid $global-border-style;
     font-weight: 500;
 
